--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bt",
-  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build"
@@ -8,7 +8,8 @@
   "dependencies": {
     "tailwindcss": "^1.4.5",
     "vue": "^3.0.0-beta.9",
-    "vue-class-component": "^8.0.0-alpha.4"
+    "vue-class-component": "^8.0.0-alpha.4",
+    "vue-router": "^4.0.0-alpha.10"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-beta.9",
