--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "vue-router": "^4.0.0-alpha.10"
   },
   "devDependencies": {
+    "@google-cloud/storage": "^4.7.0",
     "@vue/compiler-sfc": "^3.0.0-beta.9",
     "eslint": "^6.8.0",
     "eslint-config-ktsn-vue": "^2.0.0",
+    "firebase-admin": "^8.12.0",
     "prettier": "^2.0.5",
     "typescript": "^3.8.3",
     "vite": "^0.11.0"
