--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "firebase": "^7.14.2",
     "tailwindcss": "^1.4.5",
     "vue": "^3.0.0-beta.9",
     "vue-class-component": "^8.0.0-alpha.4",
