--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-config-ktsn-vue": "^2.0.0",
     "firebase-admin": "^8.12.0",
     "prettier": "^2.0.5",
+    "sharp": "^0.25.2",
+    "smartcrop-sharp": "^2.0.3",
     "typescript": "^3.8.3",
     "vite": "^0.11.0"
   }
