--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "firebase": "^7.14.2",
     "tailwindcss": "^1.4.5",
     "vue": "^3.0.0-beta.9",
-    "vue-class-component": "^8.0.0-alpha.4",
+    "vue-class-component": "../../ts/vue-class-component/",
     "vue-router": "^4.0.0-alpha.10"
   },
   "devDependencies": {
@@ -20,8 +20,7 @@
     "firebase-admin": "^8.12.0",
     "prettier": "^2.0.5",
     "sharp": "^0.25.2",
-    "smartcrop-sharp": "^2.0.3",
     "typescript": "^3.8.3",
-    "vite": "^0.11.0"
+    "vite": "^0.13.2"
   }
 }
