--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "firebase": "^7.14.2",
+    "jump.js": "^1.0.2",
     "tailwindcss": "^1.4.5",
     "vue": "^3.0.0-beta.9",
     "vue-class-component": "../../ts/vue-class-component/",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@google-cloud/storage": "^4.7.0",
+    "@types/jump.js": "^1.0.3",
     "@vue/compiler-sfc": "^3.0.0-beta.9",
     "eslint": "^6.8.0",
     "eslint-config-ktsn-vue": "^2.0.0",
