--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "jump.js": "^1.0.2",
     "tailwindcss": "^1.4.5",
     "vue": "^3.0.0-beta.9",
-    "vue-class-component": "../../ts/vue-class-component/",
+    "vue-class-component": "^8.0.0-alpha.5",
     "vue-router": "^4.0.0-alpha.10"
   },
   "devDependencies": {
