--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^6.8.0",
     "eslint-config-ktsn-vue": "^2.0.0",
     "firebase-admin": "^8.12.0",
+    "fs-extra": "^9.0.0",
     "prettier": "^2.0.5",
     "sharp": "^0.25.2",
     "typescript": "^3.8.3",
