--- a/package.json
+++ b/package.json
@@ -3,27 +3,30 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "generate": "vite build --ssr -c vite.config.ssr.ts && ts-node -O '{\"module\":\"commonjs\"}' -T generate.ts"
   },
   "dependencies": {
     "firebase": "^7.14.2",
     "jump.js": "^1.0.2",
     "tailwindcss": "^1.4.5",
-    "vue": "^3.0.0-beta.13",
-    "vue-class-component": "^8.0.0-alpha.5",
+    "vue": "^3.0.0-beta.14",
+    "vue-class-component": "^8.0.0-alpha.6",
     "vue-router": "^4.0.0-alpha.11"
   },
   "devDependencies": {
     "@google-cloud/storage": "^4.7.0",
     "@types/jump.js": "^1.0.3",
-    "@vue/compiler-sfc": "^3.0.0-beta.13",
+    "@vue/compiler-sfc": "^3.0.0-beta.14",
+    "@vue/server-renderer": "^3.0.0-beta.14",
     "eslint": "^6.8.0",
     "eslint-config-ktsn-vue": "^2.0.0",
     "firebase-admin": "^8.12.0",
     "fs-extra": "^9.0.0",
     "prettier": "^2.0.5",
     "sharp": "^0.25.2",
+    "ts-node": "^8.10.1",
     "typescript": "^3.8.3",
-    "vite": "^0.15.3"
+    "vite": "^0.16.0"
   }
 }
