--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "generate": "vite build --ssr -c vite.config.ssr.ts && ts-node -O '{\"module\":\"commonjs\"}' -T generate.ts"
+    "generate": "vite build --ssr -c vite.config.ssr.ts && ts-node -O '{\"module\":\"commonjs\"}' -T generate.ts",
+    "lint": "eslint --ext ts,vue ."
   },
   "dependencies": {
     "firebase": "^7.14.2",
     "jump.js": "^1.0.2",
     "tailwindcss": "^1.4.5",
-    "vue": "^3.0.0-beta.14",
+    "vue": "^3.0.0-beta.15",
     "vue-class-component": "^8.0.0-alpha.6",
-    "vue-router": "^4.0.0-alpha.11"
+    "vue-router": "^4.0.0-alpha.13"
   },
   "devDependencies": {
     "@google-cloud/storage": "^4.7.0",
     "@types/jump.js": "^1.0.3",
-    "@vue/compiler-sfc": "^3.0.0-beta.14",
-    "@vue/server-renderer": "^3.0.0-beta.14",
+    "@vue/compiler-sfc": "^3.0.0-beta.15",
+    "@vue/server-renderer": "^3.0.0-beta.15",
     "eslint": "^6.8.0",
-    "eslint-config-ktsn-vue": "^2.0.0",
+    "eslint-config-ktsn-vue": "^2.1.0",
     "firebase-admin": "^8.12.0",
     "fs-extra": "^9.0.0",
     "prettier": "^2.0.5",
     "sharp": "^0.25.2",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3",
-    "vite": "^0.16.0"
+    "vite": "^1.0.0-beta.1"
   }
 }
