chore: bump deps

--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "firebase": "^7.17.2",
     "jump.js": "^1.0.2",
     "tailwindcss": "^1.6.2",
-    "vue": "^3.0.0-rc.5",
-    "vue-class-component": "^8.0.0-alpha.6",
+    "vue": "^3.0.0-rc.12",
+    "vue-class-component": "^8.0.0-beta.3",
     "vue-router": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@google-cloud/storage": "^5.2.0",
     "@types/jump.js": "^1.0.3",
-    "@vue/compiler-sfc": "^3.0.0-rc.5",
-    "@vue/server-renderer": "^3.0.0-rc.5",
+    "@vue/compiler-sfc": "^3.0.0-rc.12",
+    "@vue/server-renderer": "^3.0.0-rc.12",
     "eslint": "^7.6.0",
     "eslint-config-ktsn-vue": "^2.1.0",
     "firebase-admin": "^9.0.0",
