--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint --ext ts,vue ."
   },
   "dependencies": {
-    "firebase": "^7.21.0",
+    "firebase": "^7.21.1",
     "jump.js": "^1.0.2",
     "tailwindcss": "^1.8.10",
     "vue": "^3.0.0-rc.13",
@@ -18,16 +18,16 @@
   "devDependencies": {
     "@google-cloud/storage": "^5.2.0",
     "@types/jump.js": "^1.0.3",
-    "@vue/compiler-sfc": "^3.0.0-rc.13",
-    "@vue/server-renderer": "^3.0.0-rc.13",
-    "eslint": "^7.9.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/server-renderer": "^3.0.0",
+    "eslint": "^7.10.0",
     "eslint-config-ktsn-vue": "^2.1.0",
     "firebase-admin": "^9.2.0",
     "fs-extra": "^9.0.1",
     "prettier": "^2.1.2",
-    "sharp": "^0.26.0",
+    "sharp": "^0.26.1",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2",
+    "typescript": "^4.0.3",
     "vite": "^1.0.0-rc.4"
   }
 }
