--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "generate": "vite build --ssr -c vite.config.ssr.ts && ts-node -O '{\"module\":\"commonjs\"}' -T generate.ts",
+    "generate": "vite build --ssr --outDir dist-ssr -c vite.config.ssr.ts && ts-node -O '{\"module\":\"commonjs\"}' -T generate.ts",
     "lint": "eslint --ext ts,vue ."
   },
   "dependencies": {
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@google-cloud/storage": "^5.2.0",
     "@types/jump.js": "^1.0.3",
+    "@vitejs/plugin-vue": "^1.0.5",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/server-renderer": "^3.0.0",
     "eslint": "^7.10.0",
@@ -28,6 +29,6 @@
     "sharp": "^0.26.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "vite": "^1.0.0-rc.4"
+    "vite": "^2.0.0-beta.26"
   }
 }
