--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "firebase": "^7.21.1",
     "jump.js": "^1.0.2",
     "tailwindcss": "^1.8.10",
-    "vue": "^3.0.0-rc.13",
+    "vue": "^3.0.5",
     "vue-class-component": "^8.0.0-beta.4",
-    "vue-router": "^4.0.0-beta.6"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@google-cloud/storage": "^5.2.0",
@@ -29,6 +29,6 @@
     "sharp": "^0.26.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "vite": "^2.0.0-beta.26"
+    "vite": "^2.0.0"
   }
 }
